docs: move specs to a separate folder
Handle legacy/obsolete specs as well
List all specs in extensions.html
Mark 'OLD' extensions as obsolete in extensions.html
Update the spec location in old relnotes

Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-by: Brian Paul <brianp@vmware.com>

--- a/docs/relnotes/5.1
+++ b/docs/relnotes/5.1
@@ -106,7 +106,7 @@ Vertex/Fragment program debugger
 
 GL_MESA_program_debug is an experimental extension to support
 interactive debugging of vertex and fragment programs.  See the
-docs/MESA_program_debug.spec file for details.
+docs/specs/OLD/MESA_program_debug.spec file for details.
 
 The bulk of the vertex/fragment program debugger is implemented
 outside of Mesa.  The GL_MESA_program_debug extension just has minimal
